# CPP_Modules

./: Makefile  README.md  defines.h  directories.sh  megaphone
CPP_00/: README.md
CPP_00/ex00/: Makefile  megaphone  test.sh
CPP_00/ex00/src/: megaphone.cpp
CPP_00/ex01/: Makefile  bananaphone  lol
CPP_00/ex01/incs/: Contact.hpp  Phonebook.hpp
CPP_00/ex01/src/: Contact.cpp  Phonebook.cpp  main.cpp
CPP_00/ex02/: Makefile
CPP_00/ex02/src/: Account.cpp  tests.cpp
CPP_01/: README.md
CPP_01/ex00/: Makefile
CPP_01/ex00/incs/: Zombie.hpp
CPP_01/ex00/src/: Zombie.cpp  main.cpp  newZombie.cpp  randomChump.cpp
CPP_01/ex01/: Makefile  horde
CPP_01/ex01/incs/: Zombie.hpp
CPP_01/ex01/src/: Zombie.cpp  main.cpp  zombieHorde.cpp
CPP_01/ex02/: HI  Makefile
CPP_01/ex02/src/: main.cpp
CPP_01/ex03/: Makefile
CPP_01/ex03/incs/: HumanA.hpp  HumanB.hpp  Weapon.hpp
CPP_01/ex03/src/: HumanA.cpp  HumanB.cpp  Weapon.cpp  main.cpp
CPP_01/ex04/: 42  Makefile  asd  test.sh
CPP_01/ex04/src/: main.cpp
CPP_01/ex05/: Makefile
CPP_01/ex05/src/: main.cpp
CPP_01/ex06/: Harl  Makefile
CPP_01/ex06/incs/: Harl.hpp
CPP_01/ex06/src/: Harl.cpp  main.cpp
CPP_02/: CMakeLists.txt  README.md
CPP_02/ex00/: Makefile
CPP_02/ex00/src/: main.cpp
CPP_02/ex01/incs/: Fixed.hpp
CPP_02/ex01/src/: Fixed.cpp  main.cpp
CPP_02/ex02/incs/: Fixed.hpp
CPP_02/ex02/src/: Fixed.cpp  main.cpp
CPP_02/ex03/incs/: Fixed.hpp  Point.hpp
CPP_02/ex03/src/: Point.cpp  bsp.cpp  main.cpp
CPP_03/: CMakeLists.txt  README.md
CPP_03/ex00/: Makefile
CPP_03/ex00/incs/: ClapTrap.hpp
CPP_03/ex00/src/: ClapTrap.cpp  main.cpp
CPP_03/ex01/: Makefile
CPP_03/ex01/incs/: ClapTrap.hpp  ScavTrap.hpp  defines.h
CPP_03/ex01/src/: ClapTrap.cpp  ScavTrap.cpp  main.cpp
CPP_03/ex02/: Makefile
CPP_03/ex02/incs/: ClapTrap.hpp  FragTrap.hpp  ScavTrap.hpp
CPP_03/ex02/src/: FragTrap.cpp  main.cpp
CPP_03/ex03/: Makefile
CPP_03/ex03/incs/: ClapTrap.hpp  DiamondTrap.hpp  FragTrap.hpp  ScavTrap.hpp
CPP_03/ex03/src/: ClapTrap.cpp  DiamondTrap.cpp  FragTrap.cpp  ScavTrap.cpp  main.cpp
CPP_04/: CMakeLists.txt  README.md
CPP_04/ex00/: Makefile
CPP_04/ex00/incs/: Animal.hpp  Cat.hpp  Dog.hpp  WrongCat.hpp
CPP_04/ex00/src/: Animal.cpp  Animal.hpp  Cat.cpp  Dog.cpp  WrongAnimal.hpp  WrongCat.cpp  main.cpp
CPP_04/ex01/: Makefile
CPP_04/ex01/incs/: Cat.hpp  Dog.hpp
CPP_04/ex01/src/: Cat.cpp  Dog.cpp  main.cpp
CPP_04/ex02/: Makefile
CPP_04/ex02/incs/: AAnimal.hpp  Brain.hpp  Cat.hpp  Dog.hpp  WrongAnimal.hpp  WrongCat.hpp
CPP_04/ex02/src/: AAnimal.cpp  Brain.cpp  WrongAnimal.cpp  WrongCat.cpp  main.cpp
CPP_04/ex03/: Makefile
CPP_04/ex03/incs/: AMateria.hpp  Character.hpp  Cure.hpp  Floor.hpp  ICharacter.hpp  IMateriaSource.hpp  Ice.hpp  MateriaSource.hpp
CPP_04/ex03/src/: AMateria.cpp  Character.cpp  Cure.cpp  Floor.cpp  ICharacter.cpp  IMateriaSource.cpp  IMateriaSource.hpp  Ice.cpp  MateriaSource.cpp  main.cpp
CPP_05/: CMakeLists.txt  README.md
CPP_05/ex00/: Makefile
CPP_05/ex00/incs/: Bureaucrat.hpp
CPP_05/ex00/src/: Bureaucrat.cpp  main.cpp
CPP_05/ex01/: Makefile
CPP_05/ex01/incs/: Bureaucrat.hpp  Form.hpp
CPP_05/ex01/src/: Bureaucrat.cpp  Form.cpp  main.cpp
CPP_05/ex02/: Makefile
CPP_05/ex02/incs/: AForm.hpp  Bureaucrat.hpp  PresidentialPardonForm.hpp  RobotomyRequestForm.hpp  ShrubberyCreationForm.hpp
CPP_05/ex02/src/: AForm.cpp  PresidentialPardonForm.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
CPP_05/ex03/: Makefile
CPP_05/ex03/incs/: AForm.hpp  Bureaucrat.hpp  Intern.hpp  PresidentialPardonForm.hpp  ShrubberyCreationForm.hpp
CPP_05/ex03/src/: Bureaucrat.cpp  Intern.cpp  RobotomyRequestForm.cpp  ShrubberyCreationForm.cpp  main.cpp
CPP_06/: CMakeLists.txt  README.md
CPP_06/ex00/: Makefile  scalar  test.sh
CPP_06/ex00/incs/: ScalarConverter.hpp
CPP_06/ex00/src/: ScalarConverter.cpp  main.cpp
CPP_06/ex01/: Makefile  serializer
CPP_06/ex01/incs/: Data.hpp  Serializer.hpp
CPP_06/ex01/src/: Data.cpp  Serializer.cpp  main.cpp
CPP_06/ex02/: Makefile
CPP_06/ex02/incs/: Base.hpp
CPP_06/ex02/src/: Base.cpp  main.cpp
CPP_07/: CMakeLists.txt  README.md
CPP_07/ex00/: Makefile
CPP_07/ex00/incs/: Fixed.hpp  whatever.hpp
CPP_07/ex00/src/: main.cpp
CPP_07/ex01/: Makefile
CPP_07/ex01/incs/: iter.hpp
CPP_07/ex01/src/: main.cpp
CPP_07/ex02/: Makefile
CPP_07/ex02/incs/: Array.hpp  Array.tpp  ArrayTppImplemented.hpp
CPP_07/ex02/src/: main.cpp
CPP_08/: CMakeLists.txt  README.md
CPP_08/ex00/: Makefile
CPP_08/ex00/incs/: easyfind.hpp
CPP_08/ex00/src/: main.cpp
CPP_08/ex01/: Makefile
CPP_08/ex01/incs/: Span.hpp
CPP_08/ex01/src/: Span.cpp  main.cpp
CPP_08/ex02/: Makefile
CPP_08/ex02/incs/: MutantStack.hpp  defines.h
CPP_08/ex02/src/: main.cpp
CPP_09/: CMakeLists.txt  README.md
CPP_09/ex00/: Makefile  btc  input.txt  invalidinputs.txt  test.csv
CPP_09/ex00/incs/: BitcoinExchange.hpp  Date.hpp
CPP_09/ex00/src/: BitcoinExchange.cpp  Date.cpp  main.cpp
CPP_09/ex01/: Makefile  test.sh
CPP_09/ex01/incs/: RPN.hpp
CPP_09/ex01/src/: RPN.cpp  main.cpp
CPP_09/ex02/: Makefile  PmergeMe  test.sh  tmp.cpp
CPP_09/ex02/incs/: PmergeMe.hpp  PmergeMe.tpp  defines.h
CPP_09/ex02/src/: PmergeMe.cpp  main.cpp
